# SendingMessages

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
mailings/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
mailings/management/commands/: send_mailings.py
mailings/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_message_options_and_more.py
staticfiles/css/: custom.css
templates/: base.html
templates/mailings/: attempt_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
templates/users/: login.html  password_reset.html  profile.html  register.html  resend_verification.html  user_list.html
templates/users/email/: verification_email.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_admin.py  create_groups.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_email_verification_sent_at_and_more.py
